docs/7.56/md/abennews-756-eml.md
  

* * *

AS ABAP Release 756, ©Copyright 2021 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abenabap.htm) →  [ABAP - Release News](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews.htm) →  [News for Release 7.5x](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-75.htm) →  [News for Release 7.56](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-756.htm) →  [ABAP RESTful Application Programming Model in Release 7.56](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abennews-756-restful.htm) → 

ABAP EML in Release 7.56

Modification

Entity Manipulation Language

ABAP EML keywords are now available as part of the ABAP Keyword Documentation. The following keywords and topics are covered among others:

-   [MODIFY ...](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmodify_entity_entities.htm)
    -   MODIFY ENTITY
    -   MODIFY ENTITIES
    -   MODIFY ENTITIES OPERATIONS
-   [READ ...](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapread_entity_entities.htm)
    -   READ ENTITY
    -   READ ENTITIES
    -   READ ENTITIES OPERATIONS
-   [COMMIT ENTITIES ...](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapcommit_entities.htm)
    -   COMMIT ENTITIES
    -   COMMIT ENTITIES RESPONSE OF
    -   COMMIT ENTITIES RESPONSES OF
    -   COMMIT ENTITIES BEGIN, END including CONVERT KEY OF
-   [ROLLBACK ENTITIES](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abaprollback_entities.htm)
-   [GET PERMISSIONS ...](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapset_locks.htm)
    -   GET PERMISSIONS
    -   GET PERMISSIONS OF
    -   GET PERMISSIONS OPERATIONS
-   [SET LOCKS ...](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapset_locks.htm)
    -   SET LOCKS ENTITY
    -   SET LOCKS OF
    -   SET LOCKS (dynamic form)
-   [Type Mapping for ABAP EML](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapeml_type_mapping.htm)
    -   SET NAMES
    -   SET FLAGS
    -   RAP-specific variants of the CORRESPONDING operator
-   ABAP EML for providing RAP BOs
    -   [IN LOCAL MODE](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapin_local_mode.htm)
    -   [MODIFY AUGMENTING ENTITY](https://help.sap.com/doc/abapdocu_756_index_htm/7.56/en-US/abapmodify_aug_entity_entities.htm)